# backend/models/paste.go
@@ -3,6 +3,7 @@ package models
 type Paste struct {
 	ID          string `json:"id"`
 	Text        string `json:"text,omitempty"`
+	Files       string `json:"files,omitempty"` // Encrypted JSON array of file URLs
 	Protected   bool   `json:"protected"`
 	TimeoutUnix int64  `json:"timeoutUnix"`
 	Salt        string `json:"salt,omitempty"`
